--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Game: Rock, paper or scissor</title>
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <nav>
